wallet (0.9-1) unstable; urgency=low

  * New upstream release.
    - The wallet client now supports -f and stdin for store.
    - kasetkey supports enable, disable, and examine.
    - Stop setting Stanford-specific server defaults.
  * The test suite no longer needs libio-string-perl.
  * Update debhelper compatibility level to V5 (no changes required).

 -- Russ Allbery <rra@debian.org>  Thu, 24 Apr 2008 16:09:19 -0700

wallet (0.8-1) unstable; urgency=low

  * New upstream version.
    - Fix protocol mismatch between client and server.
    - Add file object support to the wallet server.
    - Correctly handle empty objects in the wallet client.
    - Add -q flag to wallet-backend to suppress syslog logging.
    - Add class registration to the wallet-admin utility.
    - Updated design documentation.

 -- Russ Allbery <rra@debian.org>  Wed, 13 Feb 2008 13:59:06 -0800

wallet (0.7-1) unstable; urgency=low

  * New upstream version.
    - Add exists and autocreate wallet server interfaces.
    - Implement autocreation on the client instead of the server.
    - Make create once again an ADMIN-only function.
    - Always generate the srvtab from the newly downloaded keys.
    - Pass kadmin.local ktadd its options in the correct order.
    - Check naming policy before checking default ACLs.
    - Work around a bug in Net::Remctl with explicit undef arguments.
    - Correctly enable syslog logging in wallet-backend.
    - Fix the remctl configuration for keytab-backend.
  * Create /var/lib/keytabs in the keytab-backend package.

 -- Russ Allbery <rra@debian.org>  Fri, 08 Feb 2008 11:22:54 -0800

wallet (0.6-1) unstable; urgency=low

  * New upstream version.
    - Safer handling of file creation with -f in the client.
    - The client can get configuration from krb5.conf.
    - Support get in the client without -f.
    - Client support for merging keys into an existing keytab.
    - New client -u option to obtain new Kerberos credentials.