@@ -5,6 +5,8 @@ wallet (0.9-1) unstable; urgency=low
     - kasetkey supports enable, disable, and examine.
     - Stop setting Stanford-specific server defaults.
   * The test suite no longer needs libio-string-perl.
+  * Use a separate stamp file for configure and install and use touch $@
+    to create stamp files.
   * Update debhelper compatibility level to V5 (no changes required).
 
  -- Russ Allbery <rra@debian.org>  Thu, 24 Apr 2008 16:09:19 -0700
